# bluetext

./: .gitignore  README.md  dino  polytope.yml
bluetext-demo-v0/backend/: README.md  pyproject.toml
bluetext-demo-v0/backend/src/backend/: main.py
bluetext-demo-v0/backend/src/backend/db/: connection.py
bluetext-demo-v0/frontend/: .gitignore  vite.config.ts
bluetext-demo-v0/frontend/app/: routes.ts
bluetext-demo-v0/modules/postgres/: polytope.yml
lib/py/couchbase/: __init__.py  models.py
project/api/: polytope.yml  pyproject.toml
project/backend/: polytope.yml
project/frontend/: package.json  polytope.yml
project/modules/config-manager/: config.yaml  env.yaml  polytope.yml
project/modules/couchbase/: polytope.yml
project/website/: README.md  package.json  polytope.yml
project/website/app/: app.css  root.tsx
templates/: polytope.yml  project-guidlines.md
templates/api/: .env.example  README.md  cargo-generate.toml  polytope.yml  pyproject.toml  requirements.txt
templates/api/src/: main.py
templates/config-manager/: README.md  polytope.yml
templates/couchbase/: README.md  polytope.yml
templates/curity/: polytope.yml
templates/frontend/: README.md  package.json  polytope.yml  react-router.config.ts
templates/frontend-react-router/: package-lock.json  polytope.yml  vite.config.ts
templates/frontend/app/: root.tsx
templates/kong/: polytope.yml
templates/lib/py/couchbase-client/: README.md  pyproject.toml
templates/lib/py/couchbase-client/src/couchbase_client/: __init__.py  client.py  model.py
templates/lib/py/postgres-client/: README.md  pyproject.toml
templates/lib/py/postgres-client/src/postgres_client/: __init__.py  client.py
templates/lib/py/temporal-client/: README.md  pyproject.toml
templates/lib/py/temporal-client/src/temporal_client/: __init__.py  client.py
templates/lib/py/twilio-client/: README.md  pyproject.toml
templates/lib/py/twilio-client/src/twilio_client/: __init__.py  client.py
templates/ngrok/: README.md  polytope.yml
templates/postgres/: polytope.yml
templates/scopes/: api.md  frontend.md  general.md
templates/temporal/: polytope.yml
templates/twilio/: polytope.yml
(+57 files in other folders)
