[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "sqlmodel==0.0.24",
    "psycopg[binary,pool]==3.2.9",
]

[project.scripts]
app = "backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
