[project]
name = "couchbase-client"
version = "0.1.0"
description = "A standalone Couchbase client library with async support"
readme = "README.md"
authors = [
    { name = "schmoeger", email = "Dennis@Polytope.com" }
]
requires-python = ">=3.12"
dependencies = [
    "couchbase>=4.4.0",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
