[project]
name = "postgres-client"
version = "0.1.0"
description = "PostgreSQL client library for async database operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg[pool]",
    "sqlalchemy[asyncio]",
    "sqlmodel",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]