[project]
name = "temporal-client"
version = "0.1.0"
description = "A standalone Temporal client library with async support"
readme = "README.md"
authors = [
    { name = "schmoeger", email = "dennis@cillers.com" }
]
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.6.0",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
